--- a/TrainingPortal/TrainingPortal/Views/Shared/_Layout.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Shared/_Layout.cshtml
@@ -17,12 +17,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				@Html.ActionLink("Training portal", "Index", "Home", null, new { @class = "navbar-brand" })
+				@Html.ActionLink("Training portal", "Index", "Course", null, new { @class = "navbar-brand" })
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li>@Html.ActionLink("Courses", "Index", "Course")</li>
-					<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+					<li>@Html.ActionLink("Users", "Index", "User")</li>
 				</ul>
 				@Html.Partial("_LoginPartial")
 			</div>
