[TP-8] Wcf service and Category functionality.

--- a/TrainingPortal/TrainingPortal/Views/Shared/_Layout.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
 				<ul class="nav navbar-nav">
 					<li>@Html.ActionLink("Courses", "Index", "Course")</li>
 					<li>@Html.ActionLink("Users", "Index", "User")</li>
+					<li>@Html.ActionLink("Categories", "Index", "Category")</li>
 				</ul>
 				@Html.Partial("_LoginPartial")
 			</div>
