[TP-9] Navigation by category and full WCF migration.

--- a/TrainingPortal/TrainingPortal/Views/Course/Index.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Course/Index.cshtml
@@ -1,39 +1,78 @@
 ﻿@model IEnumerable<TrainingPortal.Models.Course>
 
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Courses";
 }
 
-<h2>Index</h2>
+<h2>Courses</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th></th>
-    </tr>
+<div class="row">
+	<p class="col-md-4 col-md-offset-4">
+		@Html.ActionLink("Create New", "Create")
+	</p>
+</div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+<div class="row">
+	<div class="col-md-3 navigation">
+		<ul class="nav nav-pills nav-stacked">
+			<li class="@(Request.Params["categoryId"] == null ? "active" : "")">
+				@Html.ActionLink("All", "Index", new { categoryId = "" })
+			</li>
+			@foreach (var item in ViewBag.Categories)
+			{
+				<li class="@(Request.Params["categoryId"] == item.Id ? "active" : "")">
+					@Html.ActionLink((string)item.Name, "Index", new { categoryId = item.Id })
+				</li>
+			}
+		</ul>
 
-</table>
+		@*<table class="table">
+				<tr>
+					<th>
+						@Html.DisplayName("Navigation")
+					</th>
+				</tr>
+
+				@foreach (var item in ViewBag.Categories)
+				{
+					<tr>
+						<td>
+							@Html.ActionLink((string)item.Name, "Index", new { categoryId = item.Id })
+						</td>
+					</tr>
+				}
+			</table>*@
+	</div>
+
+	<div class="col-md-8  col-md-offset-1">
+		<table class="table">
+			<tr>
+				<th>
+					@Html.DisplayNameFor(model => model.Name)
+				</th>
+				<th>
+					@Html.DisplayNameFor(model => model.Description)
+				</th>
+				<th></th>
+			</tr>
+
+			@foreach (var item in Model)
+			{
+				<tr>
+					<td>
+						@Html.DisplayFor(modelItem => item.Name)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Description)
+					</td>
+					<td>
+						@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+						@Html.ActionLink("Details", "Details", new { id = item.Id }) |
+						@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+					</td>
+				</tr>
+			}
+
+		</table>
+	</div>
+</div>
