--- a/TrainingPortal/TrainingPortal/Content/Site.css
+++ b/TrainingPortal/TrainingPortal/Content/Site.css
@@ -40,3 +40,7 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.navigation {
+	border-right: 1px solid lightgray;
+}
