--- a/TrainingPortal/TrainingPortal/Views/Account/ChangeProfile.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Account/ChangeProfile.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TrainingPortal.Models.ApplicationUser
 
 @{
-	ViewBag.Title = "ChangeProfile";
+	ViewBag.Title = "Change profile";
 }
 
-<h2>ChangeProfile</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm())
