--- a/TrainingPortal/TrainingPortal/Views/Course/Details.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Course/Details.cshtml
@@ -37,6 +37,11 @@
 		<dd>
 			[@Html.ActionLink("Change lessons", "Index", "Lesson",new { courseId = Model.Id }, null)]
 		</dd>
+
+		<dt>Tests:</dt>
+		<dd>
+			[@Html.ActionLink("Change tests", "Index", "Test", new { courseId = Model.Id }, null)]
+		</dd>
 	</dl>
 </div>
 <p>
