--- a/TrainingPortal/TrainingPortal/Views/Course/Index.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Course/Index.cshtml
@@ -4,7 +4,7 @@
 	ViewBag.Title = "Courses";
 }
 
-<h2>Courses</h2>
+<h2>@ViewBag.Title</h2>
 
 <div class="row">
 	<p class="col-md-4 col-md-offset-4">
