--- a/TrainingPortal/TrainingPortal/Views/Lesson/Index.cshtml
+++ b/TrainingPortal/TrainingPortal/Views/Lesson/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TrainingPortal.Models.Lesson>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lessons";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", new { courseId = Request.Params["courseId"] })
