--- a/TrainingPortal/TrainingPortal.Web/Views/Course/Partials/Index.cshtml
+++ b/TrainingPortal/TrainingPortal.Web/Views/Course/Partials/Index.cshtml
@@ -21,11 +21,16 @@
 				@Html.DisplayFor(modelItem => item.Description)
 			</td>
 			<td>
-				@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-				@Html.ActionLink("Details", "Details", new { id = item.Id }) |
-				@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+				@Html.ActionLink("Details", "Details", new { id = item.Id })
+				@if (User.IsInRole("admin") || User.IsInRole("editor"))
+				{
+					@:|
+					@Html.ActionLink("Edit", "Edit", new { id = item.Id })
+					@:|
+					@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+				}
 			</td>
 		</tr>
-			}
+	}
 
 </table>
