--- a/TrainingPortal/TrainingPortal.Web/Views/Course/Partials/Index.cshtml
+++ b/TrainingPortal/TrainingPortal.Web/Views/Course/Partials/Index.cshtml
@@ -22,7 +22,7 @@
 			</td>
 			<td>
 				@Html.ActionLink("Details", "Details", new { id = item.Id })
-				@if (User.IsInRole("admin") || User.IsInRole("editor"))
+				@if (User.Identity.IsAuthenticated && (User.IsInRole("admin") || User.IsInRole("editor")))
 				{
 					@:|
 					@Html.ActionLink("Edit", "Edit", new { id = item.Id })
