--- a/TrainingPortal/TrainingPortal.Web/Views/Lesson/TakeCourse.cshtml
+++ b/TrainingPortal/TrainingPortal.Web/Views/Lesson/TakeCourse.cshtml
@@ -6,37 +6,38 @@
 
 <h2>@ViewBag.Title</h2>
 
-<div class="row">
-	<div class="col-md-3 navigation">
-		<ul class="nav nav-pills nav-stacked">
-			@foreach (var item in ViewBag.Lessons)
-			{
-				string lessonId = Request.Params["lessonId"] != null ? Request.Params["lessonId"]: ViewBag.Lessons[0].Id;
-				<li class="@(lessonId == item.Id ? "active" : "")">
-					@Html.ActionLink((string)item.Name, "TakeCourse", new { courseId = Request.Params["courseId"], lessonId = item.Id })
+@if (Model != null)
+{
+	<div class="row">
+		<div class="col-md-3 navigation">
+			<ul class="nav nav-pills nav-stacked">
+
+				@foreach (var item in ViewBag.Lessons)
+				{
+					<li class="@(Model.Id == item.Id ? "active" : "")">
+						@Html.ActionLink((string)item.Name, "TakeCourse", new { courseId = Request.Params["courseId"], lessonId = item.Id })
+					</li>
+				}
+
+				<li class="active" style="margin-top: 30px">
+					@Html.ActionLink("Write test", "WriteTest", "Test", new { courseId = Request.Params["courseId"] }, new { @class = "btn" })
 				</li>
-			}
-			<li class="active">
-				@Html.ActionLink("Write test", "WriteTest", "Test",new { courseId = Request.Params["courseId"] }, new { @class = "btn" })
-			</li>
-		</ul>
-	</div>
-
-	<div class="col-md-8">
-		@if (Model != null)
-		{
-		<div>
-			<h4>@Model.Name</h4>
-			<hr />
-
-			<pre>@Model.Content</pre>
+			</ul>
 		</div>
-		}
-		else
-		{
+
+		<div class="col-md-8">
 			<div>
-				Lesson not found.
+				<h4>@Model.Name</h4>
+				<hr />
+
+				<pre>@Model.Content</pre>
 			</div>
-		}
+		</div>
 	</div>
-</div>
+}
+else
+{
+	<div>
+		Lessons not found.
+	</div>
+}
