--- a/TrainingPortal/TrainingPortal.Web/Views/Certificate/Details.cshtml
+++ b/TrainingPortal/TrainingPortal.Web/Views/Certificate/Details.cshtml
@@ -19,11 +19,20 @@
 		</dd>
 
 		<dt>
+			@Html.DisplayNameFor(model => model.Date)
+		</dt>
+
+		<dd>
+			@Html.DisplayFor(model => model.Date)
+		</dd>
+
+		<dt>
 			@Html.DisplayNameFor(model => model.Result)
 		</dt>
 
 		<dd>
 			@Html.DisplayFor(model => model.Result)
+			%
 		</dd>
 
 		<dt>
