--- a/TrainingPortal/TrainingPortal.Web/Views/Certificate/Partials/Index.cshtml
+++ b/TrainingPortal/TrainingPortal.Web/Views/Certificate/Partials/Index.cshtml
@@ -6,6 +6,6 @@
 	<img src="~/Content/certificate.jpg" />
 
 	<div class="certificate-text">
-		@User.Identity.Name
+		@User.Identity.Name | @Model.Result% | @Model.Date.Date
 	</div>
 </div>
