--- a/TrainingPortal/TrainingPortal.Web/Views/Test/WriteTest.cshtml
+++ b/TrainingPortal/TrainingPortal.Web/Views/Test/WriteTest.cshtml
@@ -7,43 +7,50 @@
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm())
+@if (Model != null && Model.Count > 0)
 {
-	@Html.AntiForgeryToken()
+	using (Html.BeginForm())
+	{
+		@Html.AntiForgeryToken()
 
-	<div class="form-horizontal">
-		<div class="form-group">
-			<div class="col-md-10">
-				<ol>
-					@for (int i = 0; i < Model.Count; i++)
+		<div class="form-horizontal">
+			<div class="form-group">
+				<div class="col-md-10">
+					<ol>
+						@for (int i = 0; i < Model.Count; i++)
 					{
 						Test test = Model[i];
 
 						if (test.Options.Count > 1)
 						{
-							<li>
-								@test.Question
+								<li>
+									@test.Question
 
-								<ul style="list-style: none;">
-									@for (int j = 0; j < test.Options.Count; j++)
-									{
-										<li>
-											@Html.CheckBoxFor(model => model[i].Options[j].IsChecked)
-											@Model[i].Options[j].Name
-										</li>
-									}
-								</ul>
-							</li>
+									<ul style="list-style: none;">
+										@for (int j = 0; j < test.Options.Count; j++)
+										{
+											<li>
+												@Html.CheckBoxFor(model => model[i].Options[j].IsChecked)
+												@Model[i].Options[j].Name
+											</li>
+										}
+									</ul>
+								</li>
 						}
 					}
-				</ol>
+					</ol>
+				</div>
 			</div>
-		</div>
 
-		<div class="form-group">
-			<div class="col-md-offset-1 col-md-10">
-				<input type="submit" value="Send" class="btn btn-default" />
+			<div class="form-group">
+				<div class="col-md-offset-1 col-md-10">
+					<input type="submit" value="Send" class="btn btn-default" />
+				</div>
 			</div>
 		</div>
-	</div>
-			}
+	}
+}
+else
+{
+	@:No tests found.
+}
